--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,7 +7,7 @@ body {
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #4d1c1c;
+  background-color: #9a9ca7;
   color: #212121;
   line-height: 1.5;
 }
